finished the recipe assignment first set-up

--- a/mockup-recipe/styles.css
+++ b/mockup-recipe/styles.css
@@ -1,37 +1,151 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-image: url('/img/background.jpg');
-    font-family: 'Playpen Sans', cursive;
-    font-weight: bolder
+  background-image: url('/img/background.jpg');
+  background-attachment: fixed;
+  font-family: 'Playpen Sans', cursive, sans-serif;
+  color: #333;
 }
-    
+
 header {
-    text-align: center;
-    font-weight: bold;
-    font-family: 'Playpen Sans', cursive;
-    max-width: 800px;
-    margin: 0 auto;
+  text-align: center;
+  font-weight: bolder;
+  max-width: 800px;
+  margin: 40px auto 0;
+  color: #000;
+  font-size: 1rem; 
 }
 
-div {
-    display: flex;
-    justify-content: center;
-    align-items: left;
-    flex-direction: column;
-    background-color: white;
+main {
+  background-color: #fff;
+  max-width: 1000px;
+  margin: 10px auto;
+  padding: 32px 32px 24px;
+  border-radius: 10px;
+  position: relative;
 }
 
-div h2 {
-    text-align: center;
-    font-weight: bold;
+button {
+  display: block;
+  margin: 24px auto;
+  padding: 20px 32px;
+  background: #8a5c58;
+  color: #fff;
+  border: none;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
-div a {
-    color: #aa7d7a;
+button:hover {
+  background: #754b47;
+}
+
+.favorites h2 {
+  text-align: center;
+  margin-bottom: 18px;
+  font-weight: bolder;
+}
+
+.hero {
+  text-align: center;
+  margin-bottom: 18px;
+}
+
+.hero h2 {
+  font-size: 1.8rem;
+  font-weight: bolder;
+  color: #000;
+  margin-bottom: 25px;
+  margin-top: 10px;
+}
+
+.hero-image img {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  border: 3px solid #8a5c58;
+  margin: 0 auto 12px;
+  display: block;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin: 18px 0 28px;
+  color: #000;
+}
+
+span {
+  color: #75474a;
+  font-weight: bold;
+}
+
+.ingredients, .steps {
+  padding: 18px 22px 12px;
+  margin-bottom: 24px;
+}
+
+.ingredients h3, .steps h3 {
+  color: #000;
+  margin-top: 0;
+  font-size: 1.3rem;
+}
+
+.ingredients ul, .steps ol {
+  margin-left: 18px;
+  padding-left: 18px;
+}
+
+.ingredients li, .steps li {
+  margin-bottom: 8px;
+  font-size: 1.05rem;
+}
+
+.ingredients {
+  background-color: #e8dbd3;
+}
+
+.steps {
+  background-color: #fff;
+}
+
+.link {
+  margin-bottom: 10px;
+}
+
+.link a {
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+a {
+  color: #aa7d7a;
+}
+
+.back-to-top {
+  text-align: right;
+  margin-top: 18px;
+  font-size: 0.95rem;
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+}
+
+.back-to-top a {
+  color: #aa7d7a;
+  font-weight: bold;
+}
+
+.back-to-top a:hover {
+  text-decoration: underline;
 }
 
 footer {
-    text-align: center;
-    font-size: small;
-    margin-top: 20px;
-    font-weight: bold;
+  text-align: center;
+  font-size: medium;
+  color: #000;
 }
