--- a/mockup-recipe/styles.css
+++ b/mockup-recipe/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
- background-image: url('/img/background.jpg');
+ background-image: url('img/background.jpg');
   background-attachment: fixed;
   font-family: 'Playpen Sans', cursive, sans-serif;
   color: #333;
